--- a/airflow_deploy/buildspec.yml
+++ b/airflow_deploy/buildspec.yml
@@ -1,12 +1,18 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
     commands:
       - echo Installing venv...
       - python3 -m venv venv
       - . venv/bin/activate
       - pip3 install -r airflow_deploy/requirements.txt
+      - deactivate
+  pre_build:
+    commands:
+      - echo running flake8 test
+      - flake8 airflow_deploy/flake_test.py
+      - on-failure: ABORT
   build:
     commands:
       - echo deploying to airflow
