--- a/airflow_deploy/buildspec.yml
+++ b/airflow_deploy/buildspec.yml
@@ -11,7 +11,9 @@ phases:
   pre_build:
     commands:
       - echo running flake8 test
+      - . venv/bin/activate
       - flake8 airflow_deploy/flake_test.py
+      - deactivate
       - on-failure: ABORT
   build:
     commands:
