--- a/airflow_deploy/buildspec.yml
+++ b/airflow_deploy/buildspec.yml
@@ -7,13 +7,13 @@ phases:
       - python3 -m venv venv
       - . venv/bin/activate
       - pip3 install -r airflow_deploy/requirements.txt
-      - deactivate
+      - . deactivate
   pre_build:
     commands:
       - echo running flake8 test
       - . venv/bin/activate
       - flake8 airflow_deploy/flake_test.py  
-      - deactivate
+      - . deactivate
     on-failure: ABORT
 
   build:
