--- a/airflow_deploy/buildspec.yml
+++ b/airflow_deploy/buildspec.yml
@@ -14,4 +14,7 @@ phases:
       - echo deploying to airflow
   post_build:
     commands:
+      - aws ssm get-parameter --name KUMARTEST --with-decryption --query Parameter.Value --output text > ~/.ssh/airflow_dev.pem
+      - chmod 600 ~/.ssh/airflow_dev.pem
+      - scp -i ~/.ssh/airflow_dev.pem airflow_deploy/flake_test.py airflow@10.74.196.116:/home/airflow/
       - echo deployment completed on `date`
