--- a/airflow_deploy/buildspec.yml
+++ b/airflow_deploy/buildspec.yml
@@ -11,10 +11,10 @@ phases:
     on-failure: ABORT
   build:
     commands:
-      - echo deploying to airflow
-  post_build:
-    commands:
+      - echo getting ssh keys
       - aws ssm get-parameter --name KUMARTEST --with-decryption --query Parameter.Value --output text > ~/.ssh/airflow_dev.pem
       - chmod 600 ~/.ssh/airflow_dev.pem
-      - scp -o StrictHostKeyChecking=no  airflow_deploy/flake_test.py airflow@10.74.196.116:/home/airflow/
-      - echo deployment completed on `date`
+  post_build:
+    commands:
+      - scp -o StrictHostKeyChecking=no ~/.ssh/airflow_dev.pem airflow_deploy/flake_test.py airflow@10.74.196.116:/home/airflow/
+      - echo airflow deployment completed on `date`
