--- a/airflow_deploy/buildspec.yml
+++ b/airflow_deploy/buildspec.yml
@@ -16,5 +16,5 @@ phases:
       - chmod 600 ~/.ssh/airflow_dev.pem
   post_build:
     commands:
-      - scp -o StrictHostKeyChecking=no ~/.ssh/airflow_dev.pem airflow_deploy/flake_test.py airflow@10.74.196.116:/home/airflow/
+      - scp -o StrictHostKeyChecking=no -i ~/.ssh/airflow_dev.pem airflow_deploy/flake_test.py airflow@10.74.196.116:/home/airflow/
       - echo airflow deployment completed on `date`
